cant add to cart

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,10 @@
  *= require_tree .
  *= require_self
  */
+
+ // CSS Framework
+@import 'bulma';
+@import 'https://fonts.googleapis.com/css?family=Raleway:400,500,600,700';
+
+// My Stylesheets
+@import 'homepage';
