--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,17 +1,58 @@
 <div class="section container home-page">
 
-    <h1>Products</h1>
-    <% @products.each do |product| %>
+  <h1>Products</h1>
+  <div class="row columns">
+    <div class="column">
       <div class="box">
-        <p><strong><%= product.name %></strong> | <%= number_to_currency product.price %>
-        <%= form_for @order_item do |f| %>
-
-            <%= f.hidden_field :product_id, value: product.id %>
-            <%= f.number_field :quantity, class: "input" %> <br><br>
-            <%= f.submit "Add to cart", class: "button is-info is-rounded" %>
-          <br>
-        <% end %></p>
+        <% @products.each do |product| %>
+          <span class="product-label"><%= product.name %></span> | <%= number_to_currency product.price %>
+          <%= form_for @order_item do |f| %>
+            <div class="row columns">
+              <div class="column is-three-fifths">
+                <%= f.hidden_field :product_id, value: product.id %>
+                <%= f.number_field :quantity, class: "input" %> <br><br>
+              </div>
+              <div class="column is-two-fifth">
+                <%= f.submit "Add", class: "button is-info is-rounded add-remove" %>
+                <%= f.submit "Remove", class: "button is-danger is-rounded add-remove" %>
+              </div>
+            </div>
+          <% end %>
+        <% end %>
+        </div>
       </div>
-    <% end %>
+
+      <div class="column">
+        <div class="box">
+          <h2>Your Cart: </h2>
+          <% if @order_items.any? %>
+            <% @order_items.each do |item| %>
+              <div class="row columns">
+                <div class="column is-one-fifth">
+                  <%= link_to image_tag("trash.png", :alt => "trash"), order_item_path(item), :data => {:confirm => "You sure?", :method => "delete"} %>
+                </div>
+                <div class="column is-two-fifths product_name">
+                  <p><strong>Product Name</strong></p>
+                  <%= item.product.name %> <br>
+                </div>
+                <div class="column is-one-fifth product_price">
+                <p><strong>Quantity</strong></p>
+                  <%= item.quantity %> <br>
+                </div>
+                <div class="column is-one-fifth product_price">
+                <p><strong>Price</strong></p>
+                  <%= number_to_currency (item.product.price * item.quantity) %> <br>
+                  (<%= number_to_currency item.product.price %> ea.)
+                </div>
+
+              </div>
+            <% end %>
+            <hr>
+            <h3 class="total-price"><strong>Total: </strong><%= number_to_currency current_order.total_price %></h3>
+          <% else %>
+            <p>Your cart is empty.</p>
+          <% end %>
+        </div>
+      </div>
   </div>
 </div>
