--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,15 +1,42 @@
-<div class="navbar">
-  <% if current_user %>
-    <p>Welcome, <%= current_user.email %></p>
-    <p><%= link_to "Edit Account", '/users/edit', class: "nav-links" %></p> &nbsp;|&nbsp;
-    <p><%= link_to "Sign out", '/users/sign_out', method: 'delete', class: "nav-links" %></p>
-  <% else %>
-    <p>
-      <%= link_to "Sign in", '/users/sign_in', class: "nav-links" %> &nbsp;|&nbsp;
-      <%= link_to "Sign up", '/users/sign_up', class: "nav-links" %> &nbsp;|&nbsp;&nbsp;
-      <%= link_to "View Cart", '/cart', class: "nav-links" %> &nbsp; | &nbsp;
-      <%= link_to "View Products", '/products', class: "nav-links" %> &nbsp;
+<!--<div class="navbar">-->
+  <%# if current_user %>
+<!--    <p>Welcome, <%#= current_user.email %></p>-->
+<!--    <p><%#= link_to "Edit Account", '/users/edit', class: "nav-links" %></p> &nbsp;|&nbsp;-->
+<!--    <p><%#= link_to "Sign out", '/users/sign_out', method: 'delete', class: "nav-links" %></p>-->
+  <%# else %>
+<!--    <p>-->
+<!--      <%#= link_to "Sign in", '/users/sign_in', class: "nav-links" %> &nbsp;|&nbsp;-->
+<!--      <%#= link_to "Sign up", '/users/sign_up', class: "nav-links" %> &nbsp;|&nbsp;&nbsp;-->
+<!--      <%#= link_to "View Cart", '/cart', class: "nav-links" %> &nbsp; | &nbsp;-->
+<!--      <%#= link_to "View Products", '/products', class: "nav-links" %> &nbsp;-->
 
-    </p>
-  <% end %>
-</div>
+<!--    </p>-->
+  <%# end %>
+<!--</div>-->
+
+<nav class="navbar" role="navigation" aria-label="main navigation">
+  <div class="navbar-start">
+    <div class="navbar-item">
+      <%= link_to "Home", root_path, class: "nav-links" %> &nbsp;|&nbsp;
+      <%= link_to "View Products", '/products', class: "nav-links" %>
+    </div>
+  </div>
+  <% if current_user %>
+    <div class="welcome-user">
+      <p>Welcome, <strong><%= current_user.email %></strong></p>
+    </div>
+    <div class="navbar-end">
+      <div class="navbar-item">
+        <p><%= link_to "View Cart", '/cart', class: "nav-links" %></p> &nbsp;|&nbsp;
+        <p><%= link_to "Edit Account", '/users/edit', class: "nav-links" %></p> &nbsp;|&nbsp;
+        <p><%= link_to "Sign out", '/users/sign_out', method: 'delete', class: "nav-links" %></p>
+      </div>
+    <% else %>
+      <div class="navbar-item">
+        <p><%= link_to "Sign in", '/users/sign_in', class: "nav-links" %></p>
+        &nbsp;|&nbsp;
+        <p><%= link_to "Sign up", '/users/sign_up', class: "nav-links" %></p>
+      </div>
+    <% end %>
+  </div>
+</nav>
