--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,7 +4,7 @@
   <div class="row columns">
     <div class="column">
       <div class="box">
-        <%= render "layouts/product_list" %>
+        <%= render "product_list" %>
       </div>
     </div>
 
